objects/Deal_Registration__c/fields/or_Ext_Opp_Reg_Time_RVP_FED_VP_Completed__c.field-meta.xml
<CustomField>
    <fullName>or_Ext_Opp_Reg_Time_RVP_FED_VP_Completed__c</fullName>
    <label>Extension Time RVP/FED VP Completed</label>
    <type>DateTime</type>
</CustomField>