objects/Deal_Registration__c/fields/or_Extension_Approval__c.field-meta.xml
<CustomField>
    <fullName>or_Extension_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to checked when Extension is submitted for approval.  Used for updating approval flow actions.</description>
    <inlineHelpText>Set to checked when Extension is submitted for approval.  Used for updating approval flow actions.</inlineHelpText>
    <label>Extension Approval?</label>
    <type>Checkbox</type>
</CustomField>