objects/Deal_Registration__c/fields/or_Has_RFP_and_is_released_to_publicFED__c.field-meta.xml
<CustomField>
    <fullName>or_Has_RFP_and_is_released_to_publicFED__c</fullName>
    <label>Has RFP and is released to public (FED)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>