objects/Deal_Registration__c/fields/or_Mapped_Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>or_Mapped_Opp_Amount__c</fullName>
    <description>INC0127793 2021-03-18 Nick Scala Label Change</description>
    <formula>Mapped_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped Opp Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>