objects/Deal_Registration__c/fields/or_Mapped_Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>or_Mapped_Opp_Close_Date__c</fullName>
    <formula>IF(ISBLANK(Mapped_Opportunity__c), TODAY() + 180, Mapped_Opportunity__r.CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped Opp Close Date</label>
    <type>Date</type>
</CustomField>