objects/Deal_Registration__c/fields/or_Mapped_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>or_Mapped_Opp_Name__c</fullName>
    <formula>Mapped_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped Opp Name</label>
    <type>Text</type>
</CustomField>