objects/Deal_Registration__c/fields/or_Mapped_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>or_Mapped_Opp_Stage__c</fullName>
    <description>SS-13637 - Updated the stagenumber values.</description>
    <formula>IF(ISBLANK(Mapped_Opportunity__c), &quot;Pending&quot;,
IF(Mapped_Opportunity__r.StageNumber__c = 190, &quot;Closed Won&quot;,
TEXT(Mapped_Opportunity__r.StageName)))

/* Formula below is prior the implementation of the new stages above on Feb 1, 2024

IF(TEXT(Mapped_Opportunity__r.StageName)= &quot;CLOSED WON&quot;,&quot;Closed Won&quot;,TEXT(Mapped_Opportunity__r.StageName))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped Opp Stage</label>
    <type>Text</type>
</CustomField>