objects/Deal_Registration__c/fields/or_New_Opp_Reg_Time_Pending_CAM__c.field-meta.xml
<CustomField>
    <fullName>or_New_Opp_Reg_Time_Pending_CAM__c</fullName>
    <label>New Deal Time Pending CAM</label>
    <type>DateTime</type>
</CustomField>