objects/Deal_Registration__c/fields/or_New_Opp_Reg_Time_RVP_FED_VP_Completed__c.field-meta.xml
<CustomField>
    <fullName>or_New_Opp_Reg_Time_RVP_FED_VP_Completed__c</fullName>
    <label>New Deal Time RVP/FED VP Completed</label>
    <type>DateTime</type>
</CustomField>