objects/Deal_Registration__c/fields/or_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>or_Next_Steps__c</fullName>
    <description>Use this field to record the Next Steps in the process of this Deal</description>
    <inlineHelpText>Use this field to record the Next Steps in the process of this Deal, including anything that may be needed before approvals can take place.</inlineHelpText>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>