objects/Deal_Registration__c/fields/or_Opp_Reg_Approval_Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>or_Opp_Reg_Approval_Flow_Status__c</fullName>
    <label>Approval Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approvals not started</fullName>
                <default>true</default>
                <label>Approvals not started</label>
            </value>
            <value>
                <fullName>Approvals in progress</fullName>
            </value>
            <value>
                <fullName>Approvals complete</fullName>
            </value>
            <value>
                <fullName>Approver rejected</fullName>
            </value>
            <value>
                <fullName>Approvals complete Ext</fullName>
                <isActive>false</isActive>
                <label>Approvals complete Ext</label>
            </value>
            <value>
                <fullName>Approvals in progress Ext</fullName>
                <isActive>false</isActive>
                <label>Approvals in progress Ext</label>
            </value>
            <value>
                <fullName>Approvals not started Ext</fullName>
                <isActive>false</isActive>
                <label>Approvals not started Ext</label>
            </value>
            <value>
                <fullName>Approver rejected Ext</fullName>
                <isActive>false</isActive>
                <label>Approver rejected Ext</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>