objects/Deal_Registration__c/fields/or_Opp_Reg_Disty_Reseller_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>or_Opp_Reg_Disty_Reseller_Email_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Disty Reseller Email Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>