objects/Deal_Registration__c/fields/or_Opp_Reg_Opp_Type__c.field-meta.xml
<CustomField>
    <fullName>or_Opp_Reg_Opp_Type__c</fullName>
    <description>11.21.2024 - No longer needed</description>
    <formula>CASE (
   TEXT(or_Opportunity_Type__c),
   &quot;New Customer&quot;,&quot;New Customer&quot;,
   &quot;Renewal&quot;,&quot;Renewal&quot;,
   &quot; &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Opportunity Type</label>
    <type>Text</type>
</CustomField>