objects/Deal_Registration__c/fields/or_Opportunity_business_drivers__c.field-meta.xml
<CustomField>
    <fullName>or_Opportunity_business_drivers__c</fullName>
    <inlineHelpText>Entered by Partner if Expected Purchase Amount is &gt;$600k - Portal Prompt: Briefly describe End Customer&apos;s use cases and drivers for initiative</inlineHelpText>
    <label>Opportunity Business Drivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>