objects/Deal_Registration__c/fields/or_Opportunity_Registration__c.field-meta.xml
<CustomField>
    <fullName>or_Opportunity_Registration__c</fullName>
    <description>Refer to the Opp Reg Policy Guide for further details on Opp Reg type requirements</description>
    <inlineHelpText>Refer to the Policy Guide for further details on Type requirements</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Registration</valueSetName>
    </valueSet>
</CustomField>