objects/Deal_Registration__c/fields/or_Opportunity_Registration_Discount_p__c.field-meta.xml
<CustomField>
    <fullName>or_Opportunity_Registration_Discount_p__c</fullName>
    <label>Opportunity Registration Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>