objects/Deal_Registration__c/fields/or_Opportunity_Registration_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>or_Opportunity_Registration_Expiry_Date__c</fullName>
    <formula>IF( NOT(ISNULL(or_Expiry_Date_New_Opp_Reg__c )) &amp;&amp; NOT(ISNULL(or_Expiry_Date_Extension_Opp_Reg__c)),
IF (or_Expiry_Date_Extension_Opp_Reg__c &lt; or_Expiry_Date_New_Opp_Reg__c, or_Expiry_Date_New_Opp_Reg__c, or_Expiry_Date_Extension_Opp_Reg__c
),
IF(NOT(ISNULL(or_Expiry_Date_New_Opp_Reg__c )),or_Expiry_Date_New_Opp_Reg__c ,
IF(NOT(ISNULL(or_Expiry_Date_Extension_Opp_Reg__c)),or_Expiry_Date_Extension_Opp_Reg__c,null)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>