objects/Deal_Registration__c/fields/or_Rejection_Reason_OppReg__c.field-meta.xml
<CustomField>
    <fullName>or_Rejection_Reason_OppReg__c</fullName>
    <inlineHelpText>Before processing the rejection, ensure rejection criteria have been met per the Deal Registration Policy and communicate to Partner that deal will be rejected with applicable reasoning</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At customer direction</fullName>
            </value>
            <value>
                <fullName>Opportunity does not meet minimum value threshold</fullName>
            </value>
            <value>
                <fullName>Opportunity is already registered with another partner</fullName>
            </value>
            <value>
                <fullName>Opportunity Registration is for end customer resale opportunities only</fullName>
            </value>
            <value>
                <fullName>Partner not authorized to resell in customer country</fullName>
            </value>
            <value>
                <fullName>Qualified Opportunity attributes have not been met</fullName>
            </value>
            <value>
                <fullName>Registration is a duplicate submission</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>