objects/Deal_Registration__c/fields/or_Reseller_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>or_Reseller_Company_Name__c</fullName>
    <description>[INC0144925] Being used in Webinfinity integration. Distributor submitted the OppReg on behalf of this Reseller.</description>
    <inlineHelpText>Distributor submitted the OppReg on behalf of this Reseller</inlineHelpText>
    <label>Reseller Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>