objects/Deal_Registration__c/fields/or_Reseller_Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>or_Reseller_Contact_Country__c</fullName>
    <description>[INC0144925]This field is being used in Webinfinity integration. Distributor submitted the OppReg on behalf of Reseller in this Country</description>
    <inlineHelpText>Distributor submitted the OppReg on behalf of Reseller in this Country</inlineHelpText>
    <label>Reseller Contact Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HQ_Country</valueSetName>
    </valueSet>
</CustomField>