objects/Deal_Registration__c/fields/or_Reseller_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>or_Reseller_Contact_Email__c</fullName>
    <description>[INC0144925] This field is being used in Webinfinity integration. Distributor submitted the OppReg on behalf of this Reseller primary contact</description>
    <inlineHelpText>Distributor submitted the OppReg on behalf of this Reseller primary contact</inlineHelpText>
    <label>Reseller Contact Email</label>
    <type>Email</type>
</CustomField>