objects/Deal_Registration__c/fields/or_Sell_Through_OppReg__c.field-meta.xml
<CustomField>
    <fullName>or_Sell_Through_OppReg__c</fullName>
    <formula>IF(ISPICKVAL(or_Opportunity_Registration__c , &quot;Partner Sourced&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Through</label>
    <type>Checkbox</type>
</CustomField>