objects/Deal_Registration__c/fields/or_Tanium_Contact__c.field-meta.xml
<CustomField>
    <fullName>or_Tanium_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tanium Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealRegistrationTaniumContact</relationshipName>
    <type>Lookup</type>
</CustomField>