objects/Deal_Registration__c/fields/or_Tanium_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>or_Tanium_Contact_Email__c</fullName>
    <formula>or_Tanium_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tanium Contact Email</label>
    <type>Text</type>
</CustomField>