objects/Deal_Registration__c/fields/or_Tanium_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>or_Tanium_Contact_Name__c</fullName>
    <description>2020-03-26 Partner Portal Sync Field.  Formula has email because on 04 May, Roz wanted to see email and not Contact Name in WI</description>
    <formula>or_Tanium_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2020-03-26 Partner Portal Sync Field.  Formula has email because on 04 May, Roz wanted to see email and not Contact Name in WI</inlineHelpText>
    <label>Tanium Contact Name</label>
    <type>Text</type>
</CustomField>