objects/Deal_Registration__c/fields/or_Total_Number_of_Endpoints_Opp_Reg__c.field-meta.xml
<CustomField>
    <fullName>or_Total_Number_of_Endpoints_Opp_Reg__c</fullName>
    <label>Total Number of Endpoints</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>End_Points_Opp_Reg</valueSetName>
    </valueSet>
</CustomField>