objects/Deal_Registration__c/fields/Partner_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Email__c</fullName>
    <formula>wi_Partner_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Contact Email</label>
    <type>Text</type>
</CustomField>