objects/Deal_Registration__c/fields/Partner_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Phone_Number__c</fullName>
    <formula>wi_Partner_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Contact Phone Number</label>
    <type>Text</type>
</CustomField>