objects/Deal_Registration__c/fields/Partner_Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Partner_Geo_Region__c</fullName>
    <formula>TEXT(wi_Associated_Partner__r.Partner_Geo_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Geo (Region)</label>
    <type>Text</type>
</CustomField>