objects/Deal_Registration__c/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <description>Channel Ops will use this field to track Deal Registrations influenced by the Partner Program.</description>
    <label>Partner Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>It&apos;s Just Lunch</fullName>
            </value>
            <value>
                <fullName>Rev Up</fullName>
            </value>
            <value>
                <fullName>Rev-up October Pull In</fullName>
            </value>
            <value>
                <fullName>ServiceNow OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>