objects/Deal_Registration__c/fields/Partner_Sales_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Account_Manager__c</fullName>
    <inlineHelpText>Did Partner Sales Account Manager submit this Deal?

If Yes, refer to the left side of this Partner Contact Information section for Partner Sales Account Manager contact info.  If No, see below for Partner Sales Account contact info.</inlineHelpText>
    <label>Did Partner Sales AM submit this Deal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>