objects/Deal_Registration__c/fields/Partner_Sales_Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Account_Manager_Email__c</fullName>
    <label>Partner Sales Account Manager Email</label>
    <type>Email</type>
</CustomField>