objects/Deal_Registration__c/fields/Partner_Sales_Account_Manager_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Account_Manager_Last_Name__c</fullName>
    <label>Partner Sales Account Manager Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>