objects/Deal_Registration__c/fields/Partner_Sales_Account_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Account_Manager_Name__c</fullName>
    <formula>Partner_Sales_Account_Manager_First_Name__c  + &quot; &quot; +   Partner_Sales_Account_Manager_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Sales Account Manager Name</label>
    <type>Text</type>
</CustomField>