objects/Deal_Registration__c/fields/Partner_Sales_Engineer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Engineer_First_Name__c</fullName>
    <description>INC0131406 Nick Scala/James Shaw Label change to Presales</description>
    <label>Partner Presales Engineer First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>