objects/Deal_Registration__c/fields/Partner_Sales_Engineer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Engineer_Phone__c</fullName>
    <description>INC0131406 Nick Scala/James Shaw Label change to Presales</description>
    <label>Partner Presales Engineer Phone</label>
    <type>Phone</type>
</CustomField>