objects/Deal_Registration__c/fields/PDD_Owner__c.field-meta.xml
<CustomField>
    <fullName>PDD_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[INC0168890] Requestor Nick Scala. We will use this field to look up the Partner Team owner from the Tanium Partner org.  For example, if we receive an OppReg for an end customer in Boston, we would lookup User &quot;Michael Presti&quot; in the new PDD Owner field as he covers that area</description>
    <inlineHelpText>Partner Team owner from the Tanium Partner org</inlineHelpText>
    <label>PDD Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealRegistration3</relationshipName>
    <type>Lookup</type>
</CustomField>