objects/Deal_Registration__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>