objects/Deal_Registration__c/fields/PreExpiry_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>PreExpiry_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INC0119131 Field is set to TRUE upon pre-expiry (30 days), and reset to FALSE upon opp reg extension approval. For triggering pre-expiry email notification.</description>
    <inlineHelpText>Field is set to &quot;Selected&quot; upon pre-expiry (30 days), and deselected upon extension approval. For triggering pre-expiry email notification.</inlineHelpText>
    <label>PreExpiry Email Sent?</label>
    <type>Checkbox</type>
</CustomField>