objects/Deal_Registration__c/fields/Primary_OppReg__c.field-meta.xml
<CustomField>
    <fullName>Primary_OppReg__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field to indicate Primary Opp Reg</description>
    <inlineHelpText>Field to indicate Primary Deal</inlineHelpText>
    <label>Primary Deal</label>
    <type>Checkbox</type>
</CustomField>