objects/Deal_Registration__c/fields/Primary_PFS_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_PFS_Territory_Name__c</fullName>
    <label>Primary PFS Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>