objects/Deal_Registration__c/fields/Primary_PFS_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_PFS_Territory_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary PFS Territory Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>