objects/Deal_Registration__c/fields/Purchase_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Time_Frame__c</fullName>
    <label>Purchase Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-4 months</fullName>
            </value>
            <value>
                <fullName>5-8 months</fullName>
            </value>
            <value>
                <fullName>9+ months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>