objects/Deal_Registration__c/fields/Recent_Lead_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lead_Type_Detail__c</fullName>
    <label>Recent Lead Type Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>