objects/Deal_Registration__c/fields/Rejection_Reason_WI__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_WI__c</fullName>
    <description>Text field, auto-populate from Rejection Reasons Opp Reg, used for portal integration.</description>
    <label>Rejection Reason WI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>