objects/Deal_Registration__c/fields/Related_contact__c.field-meta.xml
<CustomField>
    <fullName>Related_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registration (Related Contact)</relationshipLabel>
    <relationshipName>DealRegistration2</relationshipName>
    <type>Lookup</type>
</CustomField>