objects/Deal_Registration__c/fields/Select_Your_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Select_Your_Distributor__c</fullName>
    <description>[Being use in WI Integration] Ensure OppReg process aligns with our multi distribution model for FED/SLED in AMER.
 Only internal to people looking at set up. Would “Partner selected distributor on WI”</description>
    <inlineHelpText>Fed/SLED Only</inlineHelpText>
    <label>Select Your Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carahsoft</fullName>
            </value>
            <value>
                <fullName>immixGroup (Arrow)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>