objects/Deal_Registration__c/fields/Send_SPIFF_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_SPIFF_Email__c</fullName>
    <defaultValue>0</defaultValue>
    <description>2021-07-14 updated field name per INC0142979
2020-09-23 added help text</description>
    <inlineHelpText>Emails are sent to SPIFF Partner Account Recipient Email upon Deal Approval and Opp Approval.  Enter 1 to email at the time Deal is approved, 2 to email at the time Opportunity is approved, and 3 when 3 or more Opportunities have been approved.</inlineHelpText>
    <label>Send Partner Account Manager SPIFF Email</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>