objects/Deal_Registration__c/fields/SPIFF_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Recipient_Email__c</fullName>
    <description>2021-7-13 Changed Field Label ticket #INC0142979
2020-09-23 Added Help Text
2020-08-16 Case 52953 Populate with Partner Sales Account Manager (PSAM) email address if there is a value.  If PSAM is blank, populate with Partner Contact email address.  SPIFF email will be sent to this email.</description>
    <inlineHelpText>Populate with Partner Sales Account Manager (PSAM) email address if there is a value. 
If there is no email for PSAM, populate with Partner Contact email address. SPIFF email will be sent to this email.</inlineHelpText>
    <label>Partner Acct Mgr Spiff Recipient Email</label>
    <type>Email</type>
</CustomField>