objects/Deal_Registration__c/fields/Started_as_an_OppReg__c.field-meta.xml
<CustomField>
    <fullName>Started_as_an_OppReg__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Deal Registration was originally created as an Opportunity Registration (i.e., Lead) and was ported to Deal Registration as a part of the Zift Implementation project</inlineHelpText>
    <label>Started as an OppReg</label>
    <type>Checkbox</type>
</CustomField>