objects/Deal_Registration__c/fields/Sync_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Partner</label>
    <type>Checkbox</type>
</CustomField>