objects/Deal_Registration__c/fields/Track_Opportunity_Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Track_Opportunity_Created_from_Lead__c</fullName>
    <description>Used to track which Opportunities are created via a lead conversion.  Default</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Track Opportunity Created from Lead</label>
    <type>Checkbox</type>
</CustomField>