objects/Deal_Registration__c/fields/wi_Associated_Partner__c.field-meta.xml
<CustomField>
    <fullName>wi_Associated_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Partner that submitted the Deal</inlineHelpText>
    <label>Associated Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registration</relationshipLabel>
    <relationshipName>DealRegistrationWiAssociatedPartner</relationshipName>
    <type>Lookup</type>
</CustomField>